Final Sim Fixes + Preparing the game
Final fixes, core redirects and new levels to help name better the simulation level vs the game level.

Removing unused Tick() function in SimulationController.h.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Start.Start
-EditorStartupMap=/Game/Maps/Start.Start
+GameDefaultMap=/Game/Maps/L_Game.L_Game
+EditorStartupMap=/Game/Maps/L_Simulation.L_Simulation
 GlobalDefaultGameMode=/Script/ZombieApocalypse.SimulationGameMode
 
 [/Script/Engine.RendererSettings]
@@ -127,3 +127,4 @@ SoundCueCookQualityIndex=-1
 +PropertyRedirects=(OldName="/Script/ZombieApocalypse.PopulationDensityEffect.NormalPopulationDensity",NewName="/Script/ZombieApocalypse.PopulationDensityEffect.BiteMultiplierY")
 +PropertyRedirects=(OldName="/Script/ZombieApocalypse.PopulationDensityEffect.PopulationDensity",NewName="/Script/ZombieApocalypse.PopulationDensityEffect.DensityX")
 +PropertyRedirects=(OldName="/Script/ZombieApocalypse.PopulationDensityEffect.PopulationDensity",NewName="/Script/ZombieApocalypse.PopulationDensityEffect.DensityX")
+
