Updates to maps

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/L_Game.L_Game
-EditorStartupMap=/Game/Maps/L_Simulation.L_Simulation
+EditorStartupMap=/Game/Maps/L_Game.L_Game
 GlobalDefaultGameMode=/Script/ZombieApocalypse.SimulationGameMode
 
 [/Script/Engine.RendererSettings]
