--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -127,4 +127,5 @@ SoundCueCookQualityIndex=-1
 +PropertyRedirects=(OldName="/Script/ZombieApocalypse.PopulationDensityEffect.NormalPopulationDensity",NewName="/Script/ZombieApocalypse.PopulationDensityEffect.BiteMultiplierY")
 +PropertyRedirects=(OldName="/Script/ZombieApocalypse.PopulationDensityEffect.PopulationDensity",NewName="/Script/ZombieApocalypse.PopulationDensityEffect.DensityX")
 +PropertyRedirects=(OldName="/Script/ZombieApocalypse.PopulationDensityEffect.PopulationDensity",NewName="/Script/ZombieApocalypse.PopulationDensityEffect.DensityX")
++PropertyRedirects=(OldName="/Script/ZombieApocalypse.Human.TargetMesh",NewName="/Script/ZombieApocalypse.Human.TargetArrow")
 
